# RAGworks

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  chatbot.py  demo_gradio.py  doc_qa.py  reporting_demo.py  resume_demo.py
docs/: ARCHITECTURE.md  DEMO.md  index.md
sample_data/: README.md  capitals.txt
scripts/: generate_sample_pdf.py  generate_sample_resume_pdf.py
src/llm_rag/: __init__.py  chatbot.py  cli.py  demo_app.py  docqa.py  index_stub.py  pdfgen.py  pipeline.py  rag_stub.py  reporting.py  resume.py
tests/: test_chatbot.py  test_chatbot_demo.py  test_ci_workflow.py  test_cli.py  test_demo_gradio.py  test_docker_config.py  test_docqa.py  test_docqa_demo.py  test_docqa_pdf_app.py  test_docs.py  test_index.py  test_pdf_sample.py  test_persist.py  test_pipeline.py  test_reporting.py  test_reporting_demo.py  test_resume.py  test_resume_demo.py  test_resume_pdf_app.py  test_sample_data.py  test_smoke.py
