[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-rag"
version = "0.4.0"
description = "Lightweight keyword RAG stub + demo"
authors = [{name="Mohammad Hossein Rezayati"}]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["llm_rag"]

[project.scripts]
llm-rag = "llm_rag.cli:main"
